admission/ValidatingAdmissionPolicy/policies/network-cilium/ciliumclusterwidenetworkpolicies/deny.yaml
# RequiresCRD: ciliumclusterwidenetworkpolicies.cilium.io
apiVersion: cilium.io/v2
kind: CiliumClusterwideNetworkPolicy
metadata:
  name: violating-ciliumclusterwidenetworkpolicy-egress-world
  annotations:
    kubeapt.io/uuid: "0c5ae649-347c-41d8-b00e-f606594917f8"
spec:
  endpointSelector:
    matchLabels:
      app: test
  egress:
  - toEntities:
    - world
